# election-assistant

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt  run.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
app/: __init__.py  agent.py  config.py  main.py  safety.py  schemas.py
app/data/: faq.json
app/services/: __init__.py  calendar_ics.py  errors.py  faq.py  gemini.py  maps.py  translate.py  youtube.py
docs/: ACCESSIBILITY.md  API.md  CODE-QUALITY.md  SECURITY-CHECKLIST.md  TESTING.md
examples/: README.md  curl-chat.sh  curl-health.sh  curl-polling.sh  curl-reminder.sh  curl-translate.sh  curl-videos.sh  python-client.py
static/: app.js  index.html  manifest.json  robots.txt  security.txt  styles.css
tests/: conftest.py  test_agent.py  test_api.py  test_calendar_ics.py  test_faq.py  test_faq_integrity.py  test_gemini.py  test_html_accessibility.py  test_maps.py  test_openapi.py  test_properties.py  test_safety.py  test_security_headers.py  test_translate.py  test_youtube.py
