[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "election-assistant"
version = "1.0.0"
description = "Non-partisan, multilingual Election Process Education Assistant powered by Google services."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-q --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "unit: small, isolated, no I/O — runs in milliseconds",
  "integration: exercises one service client with mocked HTTP / SDK",
  "e2e: full FastAPI request/response cycle via TestClient",
  "property: Hypothesis-driven invariant test",
  "slow: takes >100 ms — keep these out of pre-commit",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
  "S",   # flake8-bandit (security)
]
ignore = [
  "E501",  # line-too-long (formatter handles)
  "S101",  # asserts in tests
  "B008",  # FastAPI Depends() default
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict_optional = true
# We keep `# type: ignore` markers on optional-dependency imports so the
# code typechecks identically whether or not the SDK is installed; do not
# flag them as unused.
warn_unused_ignores = false
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests/", "build/", "dist/"]

[[tool.mypy.overrides]]
# slowapi ships its own handler signature that mismatches Starlette's
# generic `Exception` type; the runtime contract is correct.
module = "slowapi.*"
ignore_errors = true

[tool.bandit]
skips = ["B101", "B104"]
exclude_dirs = ["tests", ".venv"]

[tool.interrogate]
# Enforces docstring coverage on the public API surface.
# See docs/CODE-QUALITY.md for rationale.
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = true
ignore-semiprivate = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = true
ignore-nested-classes = false
ignore-setters = true
fail-under = 95
exclude = ["tests", "build", "dist", ".venv"]
verbose = 1
quiet = false
color = true
